syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message Comment {
  int32 comment_id = 1;
  string user_id = 2;
  string post_id = 3;
  string username = 4;
  string first_name = 5;
  string profile_image = 6;
  string text = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CommentRequest {
  string post_id = 1;
  string text = 2;
  string post_user_id = 3;
}

message CommentResponse {
  int32 comment_id = 1;
}


message FetchCommentsRequest {
  string post_id = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message FetchCommentsResponse {
  repeated Comment comments = 1;
  bool has_more = 2; // Indicates whether there are more pages
}